--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_variables.scss
@@ -98,3 +98,5 @@ $container-max-widths: (
 $badge-font-weight: normal;
 $badge-padding-y: .4rem;
 $badge-padding-x: .6rem;
+
+$input-color: black;
